--- a/index.html
+++ b/index.html
@@ -138,24 +138,25 @@
                 <ul class="academic__courses__list">
                     <!-- Pon el logotipo de la institución de formación -->
                     <li class="academic__courses__item__img"><img src="assets\ufpr_logo.png"></li>
-                    <li class="academic__courses__item__title"><h4>Análisis de datos</h4></li>
-                    <li class="academic__courses__item__subtitle"><p>2018 - UFPR</p></li>
+                    <li class="academic__courses__item__title"><h4>Licenciatura en Geoinformática </h4></li>
+                    <li class="academic__courses__item__subtitle"><p>2024 - UAEMéx</p></li>
                 </ul>
             </div>
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
                     <!--Pon el logotipo de la institución de formación -->
                     <li class="academic__courses__item__img"><img src="assets\alura_logo.png"></li>
-                    <li class="academic__courses__item__title"><h4>Formación en UX Design</h4></li>
-                    <li class="academic__courses__item__subtitle"><p>2019 - Alura</p></li>
+                    <li class="academic__courses__item__title"><h4>Introducción al uso y representación de
+                        información geoespacial</h4></li>
+                    <li class="academic__courses__item__subtitle"><p>2021 - MéxicoX</p></li>
                 </ul>
             </div>
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
                     <!-- Pon el logotipo de la institución de formación -->
                     <li class="academic__courses__item__img"><img src="assets\ufrj_logo.png"></li>
-                    <li class="academic__courses__item__title"><h4>Posgrado en diseño</h4></li>
-                    <li class="academic__courses__item__subtitle"><p>En curso - UFRJ</p></li>
+                    <li class="academic__courses__item__title"><h4>Desafío SIG desde CERO- Medio Ambiente y Biodiversidad</h4></li>
+                    <li class="academic__courses__item__subtitle"><p>2022 - Escuela Ambiental GIS</p></li>
                 </ul>
             </div>
         </div>
