Agregamos un identificador a nuestro logo y a la imagen de perfil

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="tudo">
     <section class="menu">
         <header class="menu__header">
-            <img src="assets\Imagen4.png">
+            <img src="assets\Imagen4.png" id="logo">
             <h3 class="menu__title">José Francisco Chávez Castillo</h3>
         </header>
         <nav>
@@ -36,7 +36,7 @@
     <!-- Sección del Header/Title/Hero -->
     <section class="title">
         <div class="title__div">
-            <img class="title__profile" src="assets\perfil.jpg">
+            <img class="title__profile" src="assets\perfil.jpg" id="perfil">
             <div class="title__container">
                 <h2 class="title__bio">Hola, mi nombre es José Francisco Chávez Castillo y construyo paginas web</h2>
                 <h3 class="title__subsection">Soy pasante de la Licenciatura en Geoinformática y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
